@@ -1,6 +1,7 @@
 lldpd (0.9.3)
   * Change:
     + Do not rely on support of constructors for liblldpctl.
+    + Always log to stderr (even in addition to syslog).
 
 lldpd (0.9.2)
   * Change:
